issue/INV-10 Implementación de conexión con TaxCore
